Bug 365133 - "The FTP folder won't open!" [r=bzbarsky sr=dougt]